=======
CHANGES
=======

3.6.1 (unreleased)
------------------

- Make ``class`` directive schemas importable from old location,
  raising a deprecation warning. It was moved in the previous release,
  but some custom directives could possibly use its schemas. 

- Deprecate import of ClassDirective to announce about new location.

- Change package's mailing list address to zope-dev at zope.org,
  because zope3-dev at zope.org is now retired.

3.6.0 (2009-01-31)
------------------

- Moved the implementation of the <class> directive from this package to
  `zope.security`.  In particular, the module
  `zope.app.component.contentdirective` has moved to
  `zope.security.metaconfigure`, and a compatibility import has been
  left in its place.

- Extracted `zope.site` from zope.app.component with backwards
  compatibility imports in place. Local site related functionality
  is now in `zope.site` and packages should import from there.

- Remove more deprecated on 3.5 code:

  * zope.app.component.fields module that was pointing to the
    removed back35's LayerField.
  * zope.app.component.interface module that was moved to
    zope.component.interface ages ago.
  * zope:content and zope:localUtility directives.
  * zope:factory directive.
  * deprecated imports in zope.component.metaconfigure
  * browser:tool directive and all zope.component.browser
    meta.zcml stuff.

- Remove "back35" extras_require as it doesn't make
  any sense now.

- Remove zope.modulealias test dependency as it is
  not used anywhere.

- Deprecate ISite and IPossibleSite imports from
  zope.app.component.interfaces. They were moved
  to zope.location.interfaces ages ago. Fix imports
  in zope.app.component itself.

3.5.0 (2008-10-13)
------------------

- Remove deprecated code slated for removal on 3.5.

3.4.1 (2007-10-31)
------------------

- Resolve ``ZopeSecurityPolicy`` deprecation warning.


3.4.0 (2007-10-11)
------------------

- Initial release independent of the main Zope tree.