@@ -41,13 +41,6 @@ zope.deferredimport.deprecatedFrom(
     'IFactorySubdirective',
 )
 
-class IDefaultViewName(zope.interface.Interface):
-    """A string that contains the default view name
-
-    A default view name is used to select a view when a user hasn't
-    specified one.
-    """
-
 class IBasicViewInformation(zope.interface.Interface):
     """This is the basic information for all views."""
 
