@@ -24,9 +24,9 @@ from cStringIO import StringIO
 import zope.component
 from zope.interface import implements
 from zope.testing.doctestunit import DocTestSuite
-from zope.component.interfaces import IDefaultViewName
 from zope.component.interfaces import ComponentLookupError
 from zope.component.interface import queryInterface
+from zope.publisher.interfaces import IDefaultViewName
 
 from zope.configuration.xmlconfig import xmlconfig, XMLConfig
 from zope.configuration.exceptions import ConfigurationError
